# NeuralNetwork

./: pyproject.toml
src/: MakeNetwork.py  Network.py  Network_1.pkl  Test.py  TrainNetwork.py  mnist_loader.py
