[project]
name = "neuralnetwork"
version = "0.1.0"
description = ""
authors = [
    {name = "roma1414",email = "vinnyroma14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3,<3.0)",
    "scikit-learn (>=1.7,<2.0)",
    "torch (>=2.12.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "neuralnetwork", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
